--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
     </head>
     <body>
         <div class="mobile-container">
+            <h2>Fine Chefs.</h2>
+
             <header>
-                <input type="text" id="search-term" />
-                <button id="search"><i class="fas fa-search"></i></button>
+                <input type="text" id="search-term" placeholder="Search your recipe!"/>
+                <button id="search"><i class="fas fa-search">
+                </i>
+            </button>
             </header>
             <div class="fav-container">
                 <h3>Favorite Meals</h3>
